# resumeautomationbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run_web.py  wsgi.py
src/resumebot/: __init__.py  agents.py  claude_client.py  cli.py  compiler.py  config.py  generator.py  latex_convert.py  pipeline.py  textutils.py  webapp.py
src/resumebot/templates/: index.html  replicate.html  replicate_result.html  result.html
